# rusty-budget

./: .gitignore  Cargo.toml  README.md  index.html  styles.css
.github/workflows/: main.yml  publish.yml
src/: app.rs  components.rs  main.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  structs.rs  util.rs  utils.rs
src-tauri/src/structs/: account.rs  amount.rs  app_state.rs  file.rs  profile.rs  transaction.rs  transaction_kind.rs  transaction_type.rs
src-tauri/src/util/: account.rs  amount.rs  person.rs  transaction.rs  transaction_type.rs
src-tauri/src/utils/: account.rs  amount.rs  helper_functions.rs  person.rs  tauri_commands.rs  transaction.rs  transaction_type.rs
src/components/: account_add.rs  account_available.rs  account_not_available.rs  account_select.rs  accounts.rs  add_transaction.rs  budget.rs  content_main.rs  content_sidebar.rs  list_component.rs  main_content.rs  main_sidebar.rs  profile_loaded.rs  profile_not_loaded.rs  recent_transactions.rs  stats.rs  test_component.rs  top_bar.rs  top_bar_content.rs  transaction_add.rs  transactions.rs  transactions_recent.rs
src/utils/: enums.rs  helper_functions.rs  hooks.rs
