[package]
name = "rusty-budget"
version = "0.0.0"
description = "A simple budgeting app built with Rust and Tauri."
authors = ["Etienne Collin"]
license = "GPL-3.0"
repository = "https://github.com/etiennecollin/rusty-budget"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.26"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
