[package]
name = "rusty-budget"
version = "0.0.0"
description = "A simple budgeting app built with Rust and Tauri."
authors = ["Etienne Collin"]
license = "GPL-3.0"
repository = "https://github.com/etiennecollin/rusty-budget"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["dialog-save", "dialog-open", "path-all", "fs-read-file", "fs-write-file", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.26"
bincode = "1.3.3"
strum = "0.25.0"
strum_macros = "0.25.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
